fix resourcepack loader

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,4 +45,5 @@ jobs:
           files: |
             src/${{env.name}}-${{env.branch}}-${{env.tag}}.zip
           game-versions: ${{steps.read_file.outputs.contents}}
-          loaders: ["resourcepack"]
+          loaders: |
+            resourcepack
